# ai-showdown

./: .clang-format  .gitignore  README.md  main.cpp  map.txt  meson.build
include/: animation.hpp  archer.hpp  arrow.hpp  bomb.hpp  bomberman.hpp  config.hpp  drawable.hpp  engine.hpp  knight.hpp  map.hpp  mapparser.hpp  projectile.hpp  projectilesfactory.hpp  spritecontroller.hpp  texturesmanager.hpp  unit.hpp  unitsfactory.hpp  window.hpp
protos/: common.proto  result.proto  state.proto
protos-cpp/: common.pb.cc  common.pb.h  result.pb.cc  result.pb.h  state.pb.cc  state.pb.h
src/: animation.cpp  archer.cpp  arrow.cpp  bomb.cpp  bomberman.cpp  drawable.cpp  engine.cpp  knight.cpp  map.cpp  mapparser.cpp  projectile.cpp  projectilesfactory.cpp  spritecontroller.cpp  texturesmanager.cpp  unit.cpp  unitsfactory.cpp  window.cpp
